[gd_scene load_steps=2 format=3 uid="uid://crg6ldyk0n8jy"]

[ext_resource type="Script" path="res://scenes/autoload_scene/sound_player.gd" id="1_t2mt3"]

[node name="SoundPlayer" type="Node2D"]
script = ExtResource("1_t2mt3")

[node name="ShortPositionalQueue" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="ShortPositionalQueue"]

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="ShortPositionalQueue"]

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="ShortPositionalQueue"]

[node name="AudioStreamPlayer2D4" type="AudioStreamPlayer2D" parent="ShortPositionalQueue"]

[node name="AudioStreamPlayer2D5" type="AudioStreamPlayer2D" parent="ShortPositionalQueue"]

[node name="PositionalQueue" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="PositionalQueue"]
max_distance = 1000.0
attenuation = 2.0

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="PositionalQueue"]
max_distance = 1000.0
attenuation = 2.0

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="PositionalQueue"]
max_distance = 1000.0
attenuation = 2.0

[node name="AudioStreamPlayer2D4" type="AudioStreamPlayer2D" parent="PositionalQueue"]
max_distance = 1000.0
attenuation = 2.0

[node name="AudioStreamPlayer2D5" type="AudioStreamPlayer2D" parent="PositionalQueue"]
max_distance = 1000.0
attenuation = 2.0

[node name="AudioStreamPlayer2D6" type="AudioStreamPlayer2D" parent="PositionalQueue"]
max_distance = 1000.0
attenuation = 2.0

[node name="AudioStreamPlayer2D7" type="AudioStreamPlayer2D" parent="PositionalQueue"]
max_distance = 1000.0
attenuation = 2.0

[node name="AudioStreamPlayer2D8" type="AudioStreamPlayer2D" parent="PositionalQueue"]
max_distance = 1000.0
attenuation = 2.0

[node name="NonPositionalQueue" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="NonPositionalQueue"]

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="NonPositionalQueue"]

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="NonPositionalQueue"]

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="NonPositionalQueue"]

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="NonPositionalQueue"]

[node name="AudioStreamPlayer6" type="AudioStreamPlayer" parent="NonPositionalQueue"]

[node name="AudioStreamPlayer7" type="AudioStreamPlayer" parent="NonPositionalQueue"]

[node name="AudioStreamPlayer8" type="AudioStreamPlayer" parent="NonPositionalQueue"]

[node name="AudioStreamPlayer9" type="AudioStreamPlayer" parent="NonPositionalQueue"]

[node name="AudioStreamPlayer10" type="AudioStreamPlayer" parent="NonPositionalQueue"]

[node name="AudioStreamPlayer11" type="AudioStreamPlayer" parent="NonPositionalQueue"]

[node name="AudioStreamPlayer12" type="AudioStreamPlayer" parent="NonPositionalQueue"]

[node name="AudioStreamPlayer13" type="AudioStreamPlayer" parent="NonPositionalQueue"]

[node name="AudioStreamPlayer14" type="AudioStreamPlayer" parent="NonPositionalQueue"]

[node name="AudioStreamPlayer15" type="AudioStreamPlayer" parent="NonPositionalQueue"]

[node name="AudioStreamPlayer16" type="AudioStreamPlayer" parent="NonPositionalQueue"]

[node name="AudioStreamPlayer17" type="AudioStreamPlayer" parent="NonPositionalQueue"]

[node name="orb_sfx_cooldown" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
